Working request/response decoding and passing tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Ben Evans <bevans@zendesk.com>"]
 
 [dependencies]
-nom = "^1.2.4"
+nom = "^2.0"
+futures = "0.1"
+tokio-core = "0.1"
+tokio-service = "0.1"
+tokio-proto = "0.1"
